k8s/overlays/staging/patches/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrumquest
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: scrumquest
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
